--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -23,6 +23,8 @@
     <a href="{{ url_for('manage_categories') }}" class="btn btn-primary">📁 Manage Categories</a>
     <a href="{{ url_for('manage_products') }}" class="btn btn-primary">🏷️ Manage Products</a>
     <a href="{{ url_for('view_inventory') }}" class="btn btn-secondary">📦 View Inventory</a>
+    <a href="{{ url_for('pos') }}" class="btn btn-success">🛒 Open POS</a>
+    <a href="{{ url_for('admin_add_sales') }}" class="btn btn-primary">+ Add Sales User</a>
 </div>
 
 <div class="card">
